--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import required libraries\n"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +68,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>InvoiceNo</th>\n",
        "      <th>StockCode</th>\n",
        "      <th>year</th>\n",
@@ -84,6 +87,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>536365</td>\n",
        "      <td>85123A</td>\n",
        "      <td>2010</td>\n",
@@ -100,6 +104,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>536365</td>\n",
        "      <td>71053</td>\n",
        "      <td>2010</td>\n",
@@ -116,6 +121,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>536365</td>\n",
        "      <td>84406B</td>\n",
        "      <td>2010</td>\n",
@@ -132,6 +138,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>536365</td>\n",
        "      <td>84029G</td>\n",
        "      <td>2010</td>\n",
@@ -148,6 +155,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>536365</td>\n",
        "      <td>84029E</td>\n",
        "      <td>2010</td>\n",
@@ -177,9 +185,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397919</th>\n",
+       "      <td>541904</td>\n",
        "      <td>581587</td>\n",
        "      <td>22613</td>\n",
        "      <td>2011</td>\n",
@@ -196,6 +206,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397920</th>\n",
+       "      <td>541905</td>\n",
        "      <td>581587</td>\n",
        "      <td>22899</td>\n",
        "      <td>2011</td>\n",
@@ -212,6 +223,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397921</th>\n",
+       "      <td>541906</td>\n",
        "      <td>581587</td>\n",
        "      <td>23254</td>\n",
        "      <td>2011</td>\n",
@@ -228,6 +240,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397922</th>\n",
+       "      <td>541907</td>\n",
        "      <td>581587</td>\n",
        "      <td>23255</td>\n",
        "      <td>2011</td>\n",
@@ -244,6 +257,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397923</th>\n",
+       "      <td>541908</td>\n",
        "      <td>581587</td>\n",
        "      <td>22138</td>\n",
        "      <td>2011</td>\n",
@@ -260,22 +274,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>397924 rows × 13 columns</p>\n",
+       "<p>397924 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        InvoiceNo StockCode  year  month  day  hour  \\\n",
-       "0          536365    85123A  2010     12    3     8   \n",
-       "1          536365     71053  2010     12    3     8   \n",
-       "2          536365    84406B  2010     12    3     8   \n",
-       "3          536365    84029G  2010     12    3     8   \n",
-       "4          536365    84029E  2010     12    3     8   \n",
-       "...           ...       ...   ...    ...  ...   ...   \n",
-       "397919     581587     22613  2011     12    5    12   \n",
-       "397920     581587     22899  2011     12    5    12   \n",
-       "397921     581587     23254  2011     12    5    12   \n",
-       "397922     581587     23255  2011     12    5    12   \n",
-       "397923     581587     22138  2011     12    5    12   \n",
+       "        Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0                0     536365    85123A  2010     12    3     8   \n",
+       "1                1     536365     71053  2010     12    3     8   \n",
+       "2                2     536365    84406B  2010     12    3     8   \n",
+       "3                3     536365    84029G  2010     12    3     8   \n",
+       "4                4     536365    84029E  2010     12    3     8   \n",
+       "...            ...        ...       ...   ...    ...  ...   ...   \n",
+       "397919      541904     581587     22613  2011     12    5    12   \n",
+       "397920      541905     581587     22899  2011     12    5    12   \n",
+       "397921      541906     581587     23254  2011     12    5    12   \n",
+       "397922      541907     581587     23255  2011     12    5    12   \n",
+       "397923      541908     581587     22138  2011     12    5    12   \n",
        "\n",
        "                                Description  Quantity          InvoiceDate  \\\n",
        "0        white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
@@ -303,16 +317,17 @@
        "397922       4.15       12680          France         16.60  \n",
        "397923       4.95       12680          France         14.85  \n",
        "\n",
-       "[397924 rows x 13 columns]"
+       "[397924 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "orders = pd.read_csv(\"/Users/m.soren/Desktop/Ironhack/Labs/lab-df-calculation-and-transformation/data/Orders.csv\")\n",
+    "orders"
    ]
   },
   {
@@ -345,16 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +386,131 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>amount_spent</th>\n",
-       "      <th>Quantiles</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14646</th>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>280206.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18102</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>259657.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17450</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>194550.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16446</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>168472.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14911</th>\n",
+       "      <th>EIRE</th>\n",
+       "      <td>143825.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17956</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>12.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16454</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>6.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14792</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>6.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16738</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13256</th>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4347 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           amount_spent\n",
+       "CustomerID Country                     \n",
+       "14646      Netherlands        280206.02\n",
+       "18102      United Kingdom     259657.30\n",
+       "17450      United Kingdom     194550.79\n",
+       "16446      United Kingdom     168472.50\n",
+       "14911      EIRE               143825.06\n",
+       "...                                 ...\n",
+       "17956      United Kingdom         12.75\n",
+       "16454      United Kingdom          6.90\n",
+       "14792      United Kingdom          6.20\n",
+       "16738      United Kingdom          3.75\n",
+       "13256      United Kingdom          0.00\n",
+       "\n",
+       "[4347 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_edited = orders.groupby([\"CustomerID\", \"Country\"]).agg({\"amount_spent\": \"sum\"}).sort_values(by=\"amount_spent\", ascending=False)\n",
+    "orders_edited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>Quantile</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CustomerID</th>\n",
@@ -430,31 +560,31 @@
        "      <th>17956</th>\n",
        "      <th>United Kingdom</th>\n",
        "      <td>12.75</td>\n",
-       "      <td>Casual</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16454</th>\n",
        "      <th>United Kingdom</th>\n",
        "      <td>6.90</td>\n",
-       "      <td>Casual</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14792</th>\n",
        "      <th>United Kingdom</th>\n",
        "      <td>6.20</td>\n",
-       "      <td>Casual</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16738</th>\n",
        "      <th>United Kingdom</th>\n",
        "      <td>3.75</td>\n",
-       "      <td>Casual</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13256</th>\n",
        "      <th>United Kingdom</th>\n",
        "      <td>0.00</td>\n",
-       "      <td>Casual</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -462,29 +592,43 @@
        "</div>"
       ],
       "text/plain": [
-       "                           amount_spent Quantiles\n",
-       "CustomerID Country                               \n",
-       "14646      Netherlands        280206.02       VIP\n",
-       "18102      United Kingdom     259657.30       VIP\n",
-       "17450      United Kingdom     194550.79       VIP\n",
-       "16446      United Kingdom     168472.50       VIP\n",
-       "14911      EIRE               143825.06       VIP\n",
-       "...                                 ...       ...\n",
-       "17956      United Kingdom         12.75    Casual\n",
-       "16454      United Kingdom          6.90    Casual\n",
-       "14792      United Kingdom          6.20    Casual\n",
-       "16738      United Kingdom          3.75    Casual\n",
-       "13256      United Kingdom          0.00    Casual\n",
+       "                           amount_spent Quantile\n",
+       "CustomerID Country                              \n",
+       "14646      Netherlands        280206.02      VIP\n",
+       "18102      United Kingdom     259657.30      VIP\n",
+       "17450      United Kingdom     194550.79      VIP\n",
+       "16446      United Kingdom     168472.50      VIP\n",
+       "14911      EIRE               143825.06      VIP\n",
+       "...                                 ...      ...\n",
+       "17956      United Kingdom         12.75      NaN\n",
+       "16454      United Kingdom          6.90      NaN\n",
+       "14792      United Kingdom          6.20      NaN\n",
+       "16738      United Kingdom          3.75      NaN\n",
+       "13256      United Kingdom          0.00      NaN\n",
        "\n",
        "[4347 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "quan_75 = orders_edited.quantile(.75)[0]\n",
+    "quan_95 = orders_edited.quantile(.95)[0]\n",
+    "\n",
+    "quantile = []\n",
+    "for i in orders_edited[\"amount_spent\"]:\n",
+    "    if i >= quan_95:\n",
+    "        quantile.append(\"VIP\")\n",
+    "    elif i >= quan_75 and i < quan_95:\n",
+    "        quantile.append(\"Preffered Customer\")\n",
+    "    else:\n",
+    "        quantile.append(\"NaN\")\n",
+    "orders_edited[\"Quantile\"] = quantile\n",
+    "orders_edited"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -497,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -508,29 +652,30 @@
        "Germany             11\n",
        "France               9\n",
        "Switzerland          3\n",
-       "EIRE                 2\n",
-       "Japan                2\n",
-       "Portugal             2\n",
        "Spain                2\n",
-       "Norway               1\n",
-       "Netherlands          1\n",
-       "Singapore            1\n",
+       "Portugal             2\n",
+       "Japan                2\n",
+       "EIRE                 2\n",
        "Finland              1\n",
-       "Sweden               1\n",
-       "Denmark              1\n",
-       "Cyprus               1\n",
        "Channel Islands      1\n",
+       "Netherlands          1\n",
+       "Norway               1\n",
+       "Singapore            1\n",
+       "Denmark              1\n",
+       "Sweden               1\n",
+       "Cyprus               1\n",
        "Australia            1\n",
-       "Name: Quantiles, dtype: int64"
+       "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "vip_only_df = orders_edited[(orders_edited[\"Quantile\"]==\"VIP\")]\n",
+    "vip_only_df.value_counts(\"Country\")"
    ]
   },
   {
@@ -542,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -559,33 +704,34 @@
        "Norway               7\n",
        "Italy                5\n",
        "Finland              5\n",
-       "Channel Islands      4\n",
-       "Australia            4\n",
        "Japan                4\n",
+       "Australia            4\n",
+       "Channel Islands      4\n",
        "EIRE                 3\n",
        "Denmark              3\n",
        "Cyprus               3\n",
        "Sweden               2\n",
        "Israel               2\n",
-       "Lebanon              1\n",
        "Iceland              1\n",
+       "Austria              1\n",
        "Greece               1\n",
+       "Lebanon              1\n",
        "Malta                1\n",
        "Netherlands          1\n",
        "Poland               1\n",
        "Singapore            1\n",
        "Canada               1\n",
-       "Austria              1\n",
-       "Name: Quantiles, dtype: int64"
+       "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "vip_and_pref_df = orders_edited[(orders_edited[\"Quantile\"]==\"VIP\") | (orders_edited[\"Quantile\"]==\"Preffered Customer\")]\n",
+    "vip_and_pref_df.value_counts(\"Country\")\n"
    ]
   },
   {
@@ -597,10 +743,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.2  ('Week3': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "pythonjvsc74a57bd0025b9c9d64f40d05fdf875a59a574eacc7680b95574081fed970d89870561308"
   },
   "language_info": {
    "codemirror_mode": {
@@ -612,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
