The bee came back and couldn't find the cactus until I moved it back where it found it first

--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "orders = pd.read_csv(r\"C:\\Users\\kim.buchner\\Desktop\\Ironhack\\Module1\\WEEK2\\DAY3\\lab-df-calculation-and-transformation\\data\\Orders.csv\",index_col = 0)"
    ]
   },
   {
@@ -81,11 +81,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0     536365    85123A  2010     12    3     8   \n",
+       "1     536365     71053  2010     12    3     8   \n",
+       "2     536365    84406B  2010     12    3     8   \n",
+       "3     536365    84029G  2010     12    3     8   \n",
+       "4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55       17850  United Kingdom         15.30  \n",
+       "1       3.39       17850  United Kingdom         20.34  \n",
+       "2       2.75       17850  United Kingdom         22.00  \n",
+       "3       3.39       17850  United Kingdom         20.34  \n",
+       "4       3.39       17850  United Kingdom         20.34  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "#Add amount spent per customer\n",
+    "customers = orders.groupby([\"CustomerID\"])[[\"amount_spent\"]].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers[\"Customer Types\"] = pd.qcut(customers[\"amount_spent\"], q=[0, 0.75, 0.95, 1], labels=[\"Cheap Customers\",\"Preferred Customers\",\"VIP Customers\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>Customer Types</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>77183.60</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>4310.00</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>1797.24</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12349</th>\n",
+       "      <td>1757.55</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12350</th>\n",
+       "      <td>334.40</td>\n",
+       "      <td>Cheap Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18280</th>\n",
+       "      <td>180.60</td>\n",
+       "      <td>Cheap Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18281</th>\n",
+       "      <td>80.82</td>\n",
+       "      <td>Cheap Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18282</th>\n",
+       "      <td>178.05</td>\n",
+       "      <td>Cheap Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18283</th>\n",
+       "      <td>2094.88</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18287</th>\n",
+       "      <td>1837.28</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4339 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            amount_spent       Customer Types\n",
+       "CustomerID                                   \n",
+       "12346           77183.60        VIP Customers\n",
+       "12347            4310.00  Preferred Customers\n",
+       "12348            1797.24  Preferred Customers\n",
+       "12349            1757.55  Preferred Customers\n",
+       "12350             334.40      Cheap Customers\n",
+       "...                  ...                  ...\n",
+       "18280             180.60      Cheap Customers\n",
+       "18281              80.82      Cheap Customers\n",
+       "18282             178.05      Cheap Customers\n",
+       "18283            2094.88  Preferred Customers\n",
+       "18287            1837.28  Preferred Customers\n",
+       "\n",
+       "[4339 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customers.groupby()"
    ]
   },
   {
@@ -99,11 +390,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom     178\n",
+       "Germany             11\n",
+       "France               9\n",
+       "Switzerland          3\n",
+       "EIRE                 2\n",
+       "Spain                2\n",
+       "Portugal             2\n",
+       "Japan                2\n",
+       "Finland              1\n",
+       "Australia            1\n",
+       "Cyprus               1\n",
+       "Singapore            1\n",
+       "Netherlands          1\n",
+       "Channel Islands      1\n",
+       "Denmark              1\n",
+       "Sweden               1\n",
+       "Norway               1\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "customers_country = orders.groupby([\"CustomerID\",\"Country\"])[[\"amount_spent\"]].sum()\n",
+    "\n",
+    "customers_country[\"Customer Types\"] = pd.qcut(customers_country[\"amount_spent\"], q=[0, 0.75, 0.95, 1], labels=[\"Cheap Customers\",\"Preferred Customers\",\"VIP Customers\"])\n",
+    "\n",
+    "customers_country = customers_country.reset_index()\n",
+    "\n",
+    "customers_country.loc[customers_country['Customer Types'] == 'VIP Customers']['Country'].value_counts()"
    ]
   },
   {
@@ -115,11 +440,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom     934\n",
+       "Germany             39\n",
+       "France              29\n",
+       "Belgium             11\n",
+       "Switzerland          9\n",
+       "Norway               7\n",
+       "Spain                7\n",
+       "Portugal             7\n",
+       "Finland              5\n",
+       "Italy                5\n",
+       "Australia            4\n",
+       "Japan                4\n",
+       "Channel Islands      4\n",
+       "Denmark              3\n",
+       "EIRE                 3\n",
+       "Cyprus               3\n",
+       "Sweden               2\n",
+       "Israel               2\n",
+       "Netherlands          1\n",
+       "Iceland              1\n",
+       "Austria              1\n",
+       "Lebanon              1\n",
+       "Poland               1\n",
+       "Singapore            1\n",
+       "Canada               1\n",
+       "Greece               1\n",
+       "Malta                1\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "customers_country.loc[(customers_country['Customer Types'] == 'VIP Customers') | (customers_country['Customer Types'] == 'Preferred Customers')]['Country'].value_counts()"
    ]
   }
  ],
@@ -139,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
