--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Importing the dataset from the 'data' folder"
+    "pokemon = pd.read_csv(r\"C:\\Users\\trito.DESKTOP-V9IEUOR\\Desktop\\IronHack Data Analyst\\Labs\\week2labs\\lab-df-calculation-and-transformation\\data\\Pokemon.csv\")\n",
+    "pokemon.head()"
    ]
   },
   {
@@ -77,11 +220,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#                     1\n",
+       "Name          Bulbasaur\n",
+       "Type 1            Grass\n",
+       "Type 2           Poison\n",
+       "Total               318\n",
+       "HP                   45\n",
+       "Attack               49\n",
+       "Defense              49\n",
+       "Sp. Atk              65\n",
+       "Sp. Def              65\n",
+       "Speed                45\n",
+       "Generation            1\n",
+       "Legendary         False\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Total seems as the sum of the values of the other columns (HP + Attack + Defense + Sp. Atk + Sp. Def + Speed).\n",
+    "pokemon.iloc[0 , :]\n"
    ]
   },
   {
@@ -119,11 +287,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.unique(pokemon[\"Type 1\"])\n",
+    "# column_names = list(set(list(pd.unique(pokemon[\"Type 1\"])) + list(pd.unique(pokemon[\"Type 2\"]))))\n",
+    "# print(column_names)\n",
+    "\n",
+    "types = pd.get_dummies(pokemon['Type 1']) + pd.get_dummies(pokemon['Type 2'])"
    ]
   },
   {
@@ -145,11 +326,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>#</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.119813</td>\n",
+       "      <td>0.097614</td>\n",
+       "      <td>0.102298</td>\n",
+       "      <td>0.094786</td>\n",
+       "      <td>0.088759</td>\n",
+       "      <td>0.085817</td>\n",
+       "      <td>0.010733</td>\n",
+       "      <td>0.982516</td>\n",
+       "      <td>0.153396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>0.119813</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.618748</td>\n",
+       "      <td>0.736211</td>\n",
+       "      <td>0.612787</td>\n",
+       "      <td>0.747250</td>\n",
+       "      <td>0.717609</td>\n",
+       "      <td>0.575943</td>\n",
+       "      <td>0.048384</td>\n",
+       "      <td>0.501758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HP</th>\n",
+       "      <td>0.097614</td>\n",
+       "      <td>0.618748</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.422386</td>\n",
+       "      <td>0.239622</td>\n",
+       "      <td>0.362380</td>\n",
+       "      <td>0.378718</td>\n",
+       "      <td>0.175952</td>\n",
+       "      <td>0.058683</td>\n",
+       "      <td>0.273620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Attack</th>\n",
+       "      <td>0.102298</td>\n",
+       "      <td>0.736211</td>\n",
+       "      <td>0.422386</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.438687</td>\n",
+       "      <td>0.396362</td>\n",
+       "      <td>0.263990</td>\n",
+       "      <td>0.381240</td>\n",
+       "      <td>0.051451</td>\n",
+       "      <td>0.345408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Defense</th>\n",
+       "      <td>0.094786</td>\n",
+       "      <td>0.612787</td>\n",
+       "      <td>0.239622</td>\n",
+       "      <td>0.438687</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.223549</td>\n",
+       "      <td>0.510747</td>\n",
+       "      <td>0.015227</td>\n",
+       "      <td>0.042419</td>\n",
+       "      <td>0.246377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <td>0.088759</td>\n",
+       "      <td>0.747250</td>\n",
+       "      <td>0.362380</td>\n",
+       "      <td>0.396362</td>\n",
+       "      <td>0.223549</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.506121</td>\n",
+       "      <td>0.473018</td>\n",
+       "      <td>0.036437</td>\n",
+       "      <td>0.448907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <td>0.085817</td>\n",
+       "      <td>0.717609</td>\n",
+       "      <td>0.378718</td>\n",
+       "      <td>0.263990</td>\n",
+       "      <td>0.510747</td>\n",
+       "      <td>0.506121</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.259133</td>\n",
+       "      <td>0.028486</td>\n",
+       "      <td>0.363937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speed</th>\n",
+       "      <td>0.010733</td>\n",
+       "      <td>0.575943</td>\n",
+       "      <td>0.175952</td>\n",
+       "      <td>0.381240</td>\n",
+       "      <td>0.015227</td>\n",
+       "      <td>0.473018</td>\n",
+       "      <td>0.259133</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.023121</td>\n",
+       "      <td>0.326715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Generation</th>\n",
+       "      <td>0.982516</td>\n",
+       "      <td>0.048384</td>\n",
+       "      <td>0.058683</td>\n",
+       "      <td>0.051451</td>\n",
+       "      <td>0.042419</td>\n",
+       "      <td>0.036437</td>\n",
+       "      <td>0.028486</td>\n",
+       "      <td>-0.023121</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.079794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Legendary</th>\n",
+       "      <td>0.153396</td>\n",
+       "      <td>0.501758</td>\n",
+       "      <td>0.273620</td>\n",
+       "      <td>0.345408</td>\n",
+       "      <td>0.246377</td>\n",
+       "      <td>0.448907</td>\n",
+       "      <td>0.363937</td>\n",
+       "      <td>0.326715</td>\n",
+       "      <td>0.079794</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   #     Total        HP    Attack   Defense   Sp. Atk  \\\n",
+       "#           1.000000  0.119813  0.097614  0.102298  0.094786  0.088759   \n",
+       "Total       0.119813  1.000000  0.618748  0.736211  0.612787  0.747250   \n",
+       "HP          0.097614  0.618748  1.000000  0.422386  0.239622  0.362380   \n",
+       "Attack      0.102298  0.736211  0.422386  1.000000  0.438687  0.396362   \n",
+       "Defense     0.094786  0.612787  0.239622  0.438687  1.000000  0.223549   \n",
+       "Sp. Atk     0.088759  0.747250  0.362380  0.396362  0.223549  1.000000   \n",
+       "Sp. Def     0.085817  0.717609  0.378718  0.263990  0.510747  0.506121   \n",
+       "Speed       0.010733  0.575943  0.175952  0.381240  0.015227  0.473018   \n",
+       "Generation  0.982516  0.048384  0.058683  0.051451  0.042419  0.036437   \n",
+       "Legendary   0.153396  0.501758  0.273620  0.345408  0.246377  0.448907   \n",
+       "\n",
+       "             Sp. Def     Speed  Generation  Legendary  \n",
+       "#           0.085817  0.010733    0.982516   0.153396  \n",
+       "Total       0.717609  0.575943    0.048384   0.501758  \n",
+       "HP          0.378718  0.175952    0.058683   0.273620  \n",
+       "Attack      0.263990  0.381240    0.051451   0.345408  \n",
+       "Defense     0.510747  0.015227    0.042419   0.246377  \n",
+       "Sp. Atk     0.506121  0.473018    0.036437   0.448907  \n",
+       "Sp. Def     1.000000  0.259133    0.028486   0.363937  \n",
+       "Speed       0.259133  1.000000   -0.023121   0.326715  \n",
+       "Generation  0.028486 -0.023121    1.000000   0.079794  \n",
+       "Legendary   0.363937  0.326715    0.079794   1.000000  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "pokemon.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bug        -0.145781\n",
+       "Dark        0.056154\n",
+       "Dragon      0.229705\n",
+       "Electric    0.020971\n",
+       "Fairy      -0.036698\n",
+       "Fighting    0.077786\n",
+       "Fire        0.078726\n",
+       "Flying      0.059383\n",
+       "Ghost       0.003641\n",
+       "Grass      -0.052592\n",
+       "Ground      0.015060\n",
+       "Ice         0.060248\n",
+       "Normal     -0.105331\n",
+       "Poison     -0.090441\n",
+       "Psychic     0.124688\n",
+       "Rock        0.032731\n",
+       "Steel       0.109703\n",
+       "Water      -0.021665\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "types.corrwith(pokemon[\"Total\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#             0.119813\n",
+       "Total         1.000000\n",
+       "HP            0.618748\n",
+       "Attack        0.736211\n",
+       "Defense       0.612787\n",
+       "Sp. Atk       0.747250\n",
+       "Sp. Def       0.717609\n",
+       "Speed         0.575943\n",
+       "Generation    0.048384\n",
+       "Legendary     0.501758\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.corrwith(pokemon[\"Total\"])"
    ]
   },
   {
@@ -187,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
